# quinoa

./: .gitignore  CMakeLists.txt  mrc2gif.py  params.yaml  plot.py  settings.toml
cmake/ext/: Eigen.cmake  cxxopts.cmake  lbfgs.cmake  matplotcpp.cmake  nlopt.cmake  noa.cmake  spdlog.cmake  tomlplusplus.cmake  yaml-cpp.cmake
cmake/utils/: CompilerWarnings.cmake  ProjectOptions.cmake
docs/: ExcludeViews.md  Parameters.md  TiltScheme.md
src/quinoa/: Alignment.cpp  Alignment.hpp  Append.cmake  CTF.hpp  CTFAverage.cpp  CTFBackground.cpp  CTFBackground.hpp  CTFBaseline.cpp  CTFBaseline.hpp  CTFCoarse.cpp  CTFGlobal.cpp  CTFGrid.hpp  CTFPatches.cpp  CTFPatches.hpp  CTFRefine.cpp  CTFSimulate.hpp  CommonArea.hpp  CubicGrid.hpp  Entry.cpp  EntryPoint.cpp  Exception.cpp  Exception.h  ExcludeViews.cpp  ExcludeViews.hpp  GridSearch.hpp  Logger.cpp  Logger.hpp  Metadata.cpp  Metadata.hpp  Optimizer.hpp  Options.cpp  Options.hpp  PairwiseShift.cpp  PairwiseShift.hpp  PairwiseTilt.cpp  PairwiseTilt.hpp  Plot.cpp  Plot.hpp  PostProcessing.cpp  PostProcessing.hpp  (+22 more)
src/quinoa/core/: Alignment.cpp  Alignment.h  CTF.cpp  CTF.hpp  CTF.inl  CTFAverage.cpp  CTFGlobal.cpp  CommonArea.hpp  CubicGrid.hpp  Ewise.cu  Ewise.hpp  ExcludeViews.hpp  Geometry.h  GlobalRotation.cpp  GlobalRotation.hpp  GridSearch1D.hpp  Metadata.cpp  Metadata.h  Optimizer.hpp  PairwiseCosine.cpp  PairwiseCosine.h  PairwiseShift.cpp  PairwiseShift.hpp  Plot.hpp  Preprocessing.h  Preprocessing.hpp  ProjectionMatching.cpp  ProjectionMatching.h  ProjectionMatching.hpp  ProjectionMatching2.cpp  Reconstruction.cpp  Reconstruction.h  Reconstruction.hpp  Signal.h  Stack.cpp  Stack.hpp  Thickness.cpp  Thickness.hpp  Utilities.h  YawFinder.cpp  (+1 more)
src/quinoa/io/: Logger.cpp  Logging.h  Options.cpp  Options.h  YAML.h
